# python-sdk

./: .gitignore  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  main.py  poetry.toml  pyproject.toml  renovate.json
.github/workflows/: workflow.yml
src/tests/: test_fuzzy_search.py
src/timhatdiehandandermaus_sdk/: __init__.py  fuzzy.py  models.py
timhatdiehandandermaus_sdk/: __init__.py  fuzzy.py  models.py  utils.py
