[project]
requires-python = ">=3.11, <3.14"
name = "timhatdiehandandermaus-sdk"
version = "3.1.0"
description = "SDK for the timhatdiehandandermaus API"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "httpx ==0.28.*",
    "pydantic ==2.10.*",
    "thefuzz ==0.22.*",
]

[tool.poetry]
packages = [{ include = "timhatdiehandandermaus_sdk", from = "src" }]

[projects.urls]
repository = "https://github.com/tim-hat-die-hand-an-der-maus/python-sdk"

[tool.poetry.group.dev.dependencies]
commitizen = "==4.1.0"
mypy = "==1.14.*"
pre-commit = ">=4, <5"
pytest = ">8, <9"
ruff = "==0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[[tool.mypy.overrides]]
module = "thefuzz"
ignore_missing_imports = true
