[project]
requires-python = ">=3.11, <3.14"
name = "timhatdiehandandermaus-sdk"
version = "4.0.0"
description = "SDK for the timhatdiehandandermaus API"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "httpx ==0.28.*",
    "pydantic ==2.11.*",
    "thefuzz ==0.22.*",
]

[projects.urls]
repository = "https://github.com/tim-hat-die-hand-an-der-maus/python-sdk"

[tool.uv]
publish-url = "https://pypi.bjoernpetersen.net/"

[dependency-groups]
dev = [
    "commitizen ==4.8.0",
    "mypy ==1.15.*",
    "pre-commit >=4.0.0, <5.0.0",
    "pytest >=8.0.0, <9.0.0",
    "ruff ==0.11.10",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/timhatdiehandandermaus_sdk",
    "CHANGELOG.md",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[[tool.mypy.overrides]]
module = "thefuzz"
ignore_missing_imports = true
