[project]
requires-python = ">=3.11, <3.15"
name = "timhatdiehandandermaus-sdk"
version = "6.1.0"
description = "SDK for the timhatdiehandandermaus API"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Private :: Do Not Upload",
]

dependencies = [
    "httpx ==0.28.*",
    "pydantic ==2.12.*",
    "thefuzz ==0.22.*",
]

[projects.urls]
changelog = "https://github.com/tim-hat-die-hand-an-der-maus/python-sdk/blob/main/CHANGELOG.md"
homepage = "https://github.com/tim-hat-die-hand-an-der-maus/python-sdk"
repository = "https://github.com/tim-hat-die-hand-an-der-maus/python-sdk"

[tool.uv]
publish-url = "https://pypi.bjoernpetersen.net/"

[dependency-groups]
dev = [
    "commitizen ==4.9.1",
    "mypy ==1.18.*",
    "pre-commit >=4.0.0, <5.0.0",
    "pytest >=9.0.0, <9.1.0",
    "ruff ==0.14.4",
]

[tool.uv.build-backend]
source-include = [
    "CHANGELOG.md"
]

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[[tool.mypy.overrides]]
module = "thefuzz"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
